--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,10 @@
                               <a href="{{ site.baseurl | append: "/sl_prove" }}">Separation Logic</a>
                           </li>
                           <li>
-                              <a href="{{ site.baseurl | append: "/slsat_check" }}">Morris.js Charts</a>
+                              <a href="{{ site.baseurl | append: "/slsat_check" }}">Satisfiability Checker</a>
+                          </li>
+                          <li>
+                              <a href="{{ site.baseurl | append: "/sl_modelcheck" }}">Model Checker</a>
                           </li>
                       </ul>
                       <!-- /.nav-second-level -->
