--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -216,8 +216,12 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
-    h2 {
+    h1 {
         font-size: 32px;
+    }
+
+    h2 {
+        font-size: 26px;
 
         @include media-query($on-laptop) {
             font-size: 28px;
@@ -225,7 +229,7 @@
     }
 
     h3 {
-        font-size: 26px;
+        font-size: 24px;
 
         @include media-query($on-laptop) {
             font-size: 22px;
