--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
                       <a href="#"><i class="fa fa-home fa-fw"></i> Cyclist<span class="fa arrow"></span></a>
                       <ul class="nav nav-second-level">
                           <li>
-                              <a href="{{ site.baseurl | append: "/sl_prove" }}">Separation Logic</a>
+                              <a href="{{ site.baseurl | append: "/sl_prove" }}">Entailment Prover</a>
                           </li>
                           <li>
                               <a href="{{ site.baseurl | append: "/slsat_check" }}">Satisfiability Checker</a>
