New pages and restyling
New pages for while_abduce, sl_disprove.

Changed links to open in new tab.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,6 +38,12 @@
                           <li>
                               <a href="{{ site.baseurl | append: "/sl_modelcheck" }}">Model Checker</a>
                           </li>
+                          <li>
+                              <a href="{{ site.baseurl | append: "/sl_disprove" }}">Entailment Disprover</a>
+                          </li>
+                          <li>
+                              <a href="{{ site.baseurl | append: "/while_abduce" }}">Termination/Safety</a>
+                          </li>
                       </ul>
                       <!-- /.nav-second-level -->
                   </li>
