Installation page and releases
Added installation page with releases.

Added release links to each tool page.

Moved compiling instructions to Installation.

Restyled blockquotes and headers size.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -117,9 +117,9 @@ blockquote {
     color: $grey-color;
     border-left: 4px solid $grey-color-light;
     padding-left: $spacing-unit / 2;
-    font-size: 18px;
+    font-size: 16px;
     letter-spacing: -1px;
-    font-style: italic;
+    font-weight: 300;
 
     > :last-child {
         margin-bottom: 0;
