Added visualisation to Demo
Added visualisation to demo.

Removed ‘home’ icon from side menu.

Moved compiling instructions on top for installation page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
                       <!-- /input-group -->
                   </li>
                   <li>
-                      <a href="#"><i class="fa fa-home fa-fw"></i> Cyclist<span class="fa arrow"></span></a>
+                      <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cyclist<span class="fa arrow"></span></a>
                       <ul class="nav nav-second-level">
                           <li>
                               <a href="{{ site.baseurl | append: "/sl_prove" }}">Entailment Prover</a>
