--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,25 +16,19 @@
           <div class="sidebar-nav navbar-collapse">
               <ul class="nav" id="side-menu">
                   <li>
-                      <a href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Cyclist<span class="fa arrow"></span></a>
-                      <ul class="nav nav-second-level">
-                          <li>
-                              <a href="{{ site.baseurl | append: "/sl_prove" }}">Entailment Prover</a>
-                          </li>
-                          <li>
-                              <a href="{{ site.baseurl | append: "/slsat_check" }}">Satisfiability Checker</a>
-                          </li>
-                          <li>
-                              <a href="{{ site.baseurl | append: "/sl_modelcheck" }}">Model Checker</a>
-                          </li>
-                          <li>
-                              <a href="{{ site.baseurl | append: "/sl_disprove" }}">Entailment Disprover</a>
-                          </li>
-                          <li>
-                              <a href="{{ site.baseurl | append: "/while_abduce" }}">Termination/Safety</a>
-                          </li>
-                      </ul>
-                      <!-- /.nav-second-level -->
+                      <a href="{{ site.baseurl | append: "/sl_prove" }}"><i class="fa fa-wrench fa-fw"></i> Entailment Prover</a>
+                  </li>
+                  <li>
+                      <a href="{{ site.baseurl | append: "/slsat_check" }}"><i class="fa fa-wrench fa-fw"></i> Satisfiability Checker</a>
+                  </li>
+                  <li>
+                      <a href="{{ site.baseurl | append: "/sl_modelcheck" }}"><i class="fa fa-wrench fa-fw"></i> Model Checker</a>
+                  </li>
+                  <li>
+                      <a href="{{ site.baseurl | append: "/sl_disprove" }}"><i class="fa fa-wrench fa-fw"></i> Entailment Disprover</a>
+                  </li>
+                  <li>
+                      <a href="{{ site.baseurl | append: "/while_abduce" }}"><i class="fa fa-wrench fa-fw"></i> Termination/Safety Prover</a>
                   </li>
                   <li>
                       <a href="{{ site.baseurl | append: "/installation" }}"><i class="fa fa-gears fa-fw"></i> Installation</a>
