--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,5 +31,5 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="icon" type="image/png" href="http://localhost:4000/favicon.png">
+  <link rel="icon" type="image/png" href="http://www.cyclist-prover.org/favicon.png">
 </head>
