Fixed a file name to match tool name.  Turned names on 1st page into links.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
                       <a href="{{ site.baseurl | append: "/sl_prove" }}"><i class="fa fa-wrench fa-fw"></i> Entailment Prover</a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl | append: "/slsat_check" }}"><i class="fa fa-wrench fa-fw"></i> Satisfiability Checker</a>
+                      <a href="{{ site.baseurl | append: "/sl_satcheck" }}"><i class="fa fa-wrench fa-fw"></i> Satisfiability Checker</a>
                   </li>
                   <li>
                       <a href="{{ site.baseurl | append: "/sl_modelcheck" }}"><i class="fa fa-wrench fa-fw"></i> Model Checker</a>
