Overhauled text for most tools.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,10 @@
                       <a href="{{ site.baseurl | append: "/sl_disprove" }}"><i class="fa fa-wrench fa-fw"></i> Entailment Disprover</a>
                   </li>
                   <li>
-                      <a href="{{ site.baseurl | append: "/while_abduce" }}"><i class="fa fa-wrench fa-fw"></i> Termination/Safety Prover</a>
+                      <a href="{{ site.baseurl | append: "/while_prove" }}"><i class="fa fa-wrench fa-fw"></i> Termination/Safety Prover</a>
+                  </li>
+                  <li>
+                      <a href="{{ site.baseurl | append: "/while_abduce" }}"><i class="fa fa-wrench fa-fw"></i> Termination/Safety Abducer</a>
                   </li>
                   <li>
                       <a href="{{ site.baseurl | append: "/installation" }}"><i class="fa fa-gears fa-fw"></i> Installation</a>
